--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
     <!--指定程序JDK版本和编译版本-->
 
     <build>
+
+        <!--指定编译文件-->
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
+
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
